add example code for pinned virtual thread